# action-cold-start-optimization

./: .gitignore  README.md  action.yml  build-bundle.js  build-optimized.ts  debug-wasm.ts  implementation-plan-phase1.md  next-steps.md  package.json  phase2-issues.md  roadmap.md  sample-plugin.md  setup-wasm.sh  test-plugin-flow-simple.ts  test-plugin-flow-with-sdk-fix.ts  test-plugin-flow.ts  tsconfig.json  tsconfig.sdk.json
.github/workflows/: deploy-plugin.yml  test-plugin.yml
docs/: README.md  implementation-phase2.md  implementation-phase3.md  phase3-milestones.md  roadmap.md  sample-plugin.md
docs/site/: index.md  package-lock.json  package.json  run-docs.sh
my-plugin/: package.json  plugin.config.ts
my-plugin-2/: package.json  plugin.config.ts  tsconfig.json
my-plugin/src/: types.ts  wasm-config.ts
plugins/my-plugin/: package.json  tsconfig.json
plugins/test-auto-plugin/: package-lock.json
plugins/test-ui-plugin/: plugin.config.ts
public/: index.html
scripts/: create-plugin.js  generate-action.js
scripts/tools/: create-plugin-interactive.ts  dashboard-template.html  local-dev-server.ts
scripts/utils/: create-plugin-interactive.ts  local-dev-server.ts
src/: index.ts  wasm-inline.ts  wasm-wrapper.ts
src/core/: index.ts
src/sdk/: README.md  config.ts  context.ts  environment.ts  events.ts  (+3 more)
test-auto-plugin/: plugin.config.ts
test-plugin/: package.json
tests/: run-tests.ts  test-action.ts  test-plugin-flow-simple.ts  test-plugin-flow-with-sdk-fix.ts  test-plugin-flow.ts  tsconfig.json
wasm/: Cargo.toml
wasm/src/: lib.rs
(+108 files in other folders)
