[package]
name = "action-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly implementation for GitHub Action"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
opt-level = 's'
